--- a/notebooks/members/Members.ipynb
+++ b/notebooks/members/Members.ipynb
@@ -2,306 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mit. Nr.</th>\n",
-       "      <th>Name 1</th>\n",
-       "      <th>Name 2</th>\n",
-       "      <th>Titel</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>Mitglied seit.</th>\n",
-       "      <th>E-Mail</th>\n",
-       "      <th>Telefonnummer</th>\n",
-       "      <th>SteuerNr.</th>\n",
-       "      <th>Ust.</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Bezugsrichtung</th>\n",
-       "      <th>WechselrichterNr.</th>\n",
-       "      <th>PLZ.1</th>\n",
-       "      <th>Ort.1</th>\n",
-       "      <th>Straße.1</th>\n",
-       "      <th>HausNr..1</th>\n",
-       "      <th>aktiviert</th>\n",
-       "      <th>deaktiviert</th>\n",
-       "      <th>Zp. Tarifname</th>\n",
-       "      <th>Umspannwerk</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Martin</td>\n",
-       "      <td>Aigner</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-10</td>\n",
-       "      <td>martin@maigner.net</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CONSUMPTION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Loskoglweg</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2024-01-01 00:00:00.000</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Verbrauch-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Martin</td>\n",
-       "      <td>Aigner</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-10</td>\n",
-       "      <td>martin@maigner.net</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>GENERATION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Loskoglweg</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2024-01-11 11:41:36.377</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Erzeugung-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Johannes</td>\n",
-       "      <td>Kals</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-21</td>\n",
-       "      <td>johanneskals@icloud.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CONSUMPTION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Rittingerstrasse</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-01-21 20:57:10.367</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Verbrauch-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Johannes</td>\n",
-       "      <td>Kals</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-21</td>\n",
-       "      <td>johanneskals@icloud.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CONSUMPTION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Rittingerstrasse</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-01-21 20:58:50.004</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Verbrauch-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Martin</td>\n",
-       "      <td>Schott</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-21</td>\n",
-       "      <td>schottm4rtin@gmail.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CONSUMPTION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Sarsteinerstraße</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-01-21 20:56:50.192</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Verbrauch-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Martin</td>\n",
-       "      <td>Schott</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-21</td>\n",
-       "      <td>schottm4rtin@gmail.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>GENERATION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Sarsteinerstraße</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-01-21 20:53:32.507</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Erzeugung-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Herward</td>\n",
-       "      <td>Zitterl</td>\n",
-       "      <td>Dr.</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-21</td>\n",
-       "      <td>herward.zitterl@gmail.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CONSUMPTION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Frauengasse</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-01-21 21:03:10.050</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Verbrauch-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Herward</td>\n",
-       "      <td>Zitterl</td>\n",
-       "      <td>Dr.</td>\n",
-       "      <td>ACTIVE</td>\n",
-       "      <td>2024-01-21</td>\n",
-       "      <td>herward.zitterl@gmail.com</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>GENERATION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>Bad Ischl</td>\n",
-       "      <td>Frauengasse</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-01-21 21:06:19.506</td>\n",
-       "      <td>2999-12-31 00:00:00</td>\n",
-       "      <td>Erzeugung-2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 37 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Mit. Nr.    Name 1   Name 2 Titel  Status Mitglied seit.  \\\n",
-       "0         1    Martin   Aigner   NaN  ACTIVE     2024-01-10   \n",
-       "1         1    Martin   Aigner   NaN  ACTIVE     2024-01-10   \n",
-       "2         3  Johannes     Kals   NaN  ACTIVE     2024-01-21   \n",
-       "3         3  Johannes     Kals   NaN  ACTIVE     2024-01-21   \n",
-       "4         2    Martin   Schott   NaN  ACTIVE     2024-01-21   \n",
-       "5         2    Martin   Schott   NaN  ACTIVE     2024-01-21   \n",
-       "6         4   Herward  Zitterl   Dr.  ACTIVE     2024-01-21   \n",
-       "7         4   Herward  Zitterl   Dr.  ACTIVE     2024-01-21   \n",
-       "\n",
-       "                      E-Mail  Telefonnummer  SteuerNr.  Ust.  ...  \\\n",
-       "0         martin@maigner.net            NaN        NaN   NaN  ...   \n",
-       "1         martin@maigner.net            NaN        NaN   NaN  ...   \n",
-       "2    johanneskals@icloud.com            NaN        NaN   NaN  ...   \n",
-       "3    johanneskals@icloud.com            NaN        NaN   NaN  ...   \n",
-       "4     schottm4rtin@gmail.com            NaN        NaN   NaN  ...   \n",
-       "5     schottm4rtin@gmail.com            NaN        NaN   NaN  ...   \n",
-       "6  herward.zitterl@gmail.com            NaN        NaN   NaN  ...   \n",
-       "7  herward.zitterl@gmail.com            NaN        NaN   NaN  ...   \n",
-       "\n",
-       "  Bezugsrichtung WechselrichterNr.  PLZ.1      Ort.1          Straße.1  \\\n",
-       "0    CONSUMPTION               NaN   4820  Bad Ischl        Loskoglweg   \n",
-       "1     GENERATION               NaN   4820  Bad Ischl        Loskoglweg   \n",
-       "2    CONSUMPTION               NaN   4820  Bad Ischl  Rittingerstrasse   \n",
-       "3    CONSUMPTION               NaN   4820  Bad Ischl  Rittingerstrasse   \n",
-       "4    CONSUMPTION               NaN   4820  Bad Ischl  Sarsteinerstraße   \n",
-       "5     GENERATION               NaN   4820  Bad Ischl  Sarsteinerstraße   \n",
-       "6    CONSUMPTION               NaN   4820  Bad Ischl       Frauengasse   \n",
-       "7     GENERATION               NaN   4820  Bad Ischl       Frauengasse   \n",
-       "\n",
-       "  HausNr..1               aktiviert          deaktiviert   Zp. Tarifname  \\\n",
-       "0        14 2024-01-01 00:00:00.000  2999-12-31 00:00:00  Verbrauch-2024   \n",
-       "1        14 2024-01-11 11:41:36.377  2999-12-31 00:00:00  Erzeugung-2024   \n",
-       "2         1 2024-01-21 20:57:10.367  2999-12-31 00:00:00  Verbrauch-2024   \n",
-       "3         1 2024-01-21 20:58:50.004  2999-12-31 00:00:00  Verbrauch-2024   \n",
-       "4         8 2024-01-21 20:56:50.192  2999-12-31 00:00:00  Verbrauch-2024   \n",
-       "5         8 2024-01-21 20:53:32.507  2999-12-31 00:00:00  Erzeugung-2024   \n",
-       "6         8 2024-01-21 21:03:10.050  2999-12-31 00:00:00  Verbrauch-2024   \n",
-       "7         8 2024-01-21 21:06:19.506  2999-12-31 00:00:00  Erzeugung-2024   \n",
-       "\n",
-       "  Umspannwerk  \n",
-       "0         NaN  \n",
-       "1         NaN  \n",
-       "2         NaN  \n",
-       "3         NaN  \n",
-       "4         NaN  \n",
-       "5         NaN  \n",
-       "6         NaN  \n",
-       "7         NaN  \n",
-       "\n",
-       "[8 rows x 37 columns]"
+       "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,32 +26,42 @@
     "import os \n",
     "\n",
     "load_dotenv()\n",
-    "#p = os.getenv('MIDDLEWARE_DB_PASSWORD')\n",
-    "\n",
-    "members_df"
+    "#p = os.getenv('MIDDLEWARE_DB_PASSWORD')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_list = members_df['E-Mail'].unique()\n",
+    "#email_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['martin@maigner.net', 'johanneskals@icloud.com',\n",
-       "       'schottm4rtin@gmail.com', 'herward.zitterl@gmail.com'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationalError",
+     "evalue": "connection failed: FATAL:  password authentication failed for user \"middleware\"\nconnection to server at \"3.78.82.248\", port 5432 failed: FATAL:  no pg_hba.conf entry for host \"85.127.127.139\", user \"middleware\", database \"middleware\", no encryption",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpsycopg\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mpsycopg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdbname=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMIDDLEWARE_DB_DATABASE\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m user=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMIDDLEWARE_DB_USER\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m host=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMIDDLEWARE_DB_HOST\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m password=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMIDDLEWARE_DB_PASSWORD\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOK\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages/psycopg/connection.py:749\u001b[0m, in \u001b[0;36mConnection.connect\u001b[0;34m(cls, conninfo, autocommit, prepare_threshold, row_factory, cursor_factory, context, **kwargs)\u001b[0m\n\u001b[1;32m    747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m rv:\n\u001b[1;32m    748\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m last_ex\n\u001b[0;32m--> 749\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m last_ex\u001b[38;5;241m.\u001b[39mwith_traceback(\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    751\u001b[0m rv\u001b[38;5;241m.\u001b[39m_autocommit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mbool\u001b[39m(autocommit)\n\u001b[1;32m    752\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m row_factory:\n",
+      "\u001b[0;31mOperationalError\u001b[0m: connection failed: FATAL:  password authentication failed for user \"middleware\"\nconnection to server at \"3.78.82.248\", port 5432 failed: FATAL:  no pg_hba.conf entry for host \"85.127.127.139\", user \"middleware\", database \"middleware\", no encryption"
+     ]
     }
    ],
    "source": [
-    "email_list = members_df['E-Mail'].unique()\n",
-    "email_list"
+    "import psycopg\n",
+    "\n",
+    "with psycopg.connect(f\"dbname={os.getenv('MIDDLEWARE_DB_DATABASE')} user={os.getenv('MIDDLEWARE_DB_USER')} host={os.getenv('MIDDLEWARE_DB_HOST')} password={os.getenv('MIDDLEWARE_DB_PASSWORD')} sslmode=require \"):\n",
+    "    print(\"OK\")"
    ]
   },
   {
