energy data import

--- a/notebooks/finance/Jahresabschluss/Abschluss.ipynb
+++ b/notebooks/finance/Jahresabschluss/Abschluss.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Jahresabschluss\n",
-    "## Buchungen"
+    "## Sparkasse George CSV Export"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,11 @@
     "sum_of_bookings = df['Betrag'].sum()\n",
     "print(sum_of_bookings, \"EUR Buchungssumme (Kontostand)\", YEAR)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
