--- a/notebooks/finance/Bookings.ipynb
+++ b/notebooks/finance/Bookings.ipynb
@@ -2,32 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: python-dotenv in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (1.0.1)\n",
-      "Requirement already satisfied: pandas in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (2.2.2)\n",
-      "Requirement already satisfied: chardet in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (5.2.0)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (from pandas) (2.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/martin/Workspace/Energiegemeinschaft/.venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install python-dotenv pandas chardet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected encoding: UTF-16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import chardet\n",
     "\n",
@@ -65,240 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Eigener Kontoname</th>\n",
-       "      <th>Eigene IBAN</th>\n",
-       "      <th>Buchungsdatum</th>\n",
-       "      <th>Partnername</th>\n",
-       "      <th>Partner IBAN</th>\n",
-       "      <th>BIC/SWIFT</th>\n",
-       "      <th>Partner Kontonummer</th>\n",
-       "      <th>Bankleitzahl</th>\n",
-       "      <th>Betrag</th>\n",
-       "      <th>Währung</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Buchungsreferenz</th>\n",
-       "      <th>Notiz</th>\n",
-       "      <th>Highlight</th>\n",
-       "      <th>Valutadatum</th>\n",
-       "      <th>Virtuelle Kartennummer</th>\n",
-       "      <th>Bezahlt mit</th>\n",
-       "      <th>App</th>\n",
-       "      <th>Zahlungsreferenz</th>\n",
-       "      <th>Mandats ID</th>\n",
-       "      <th>Creditor ID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Erneuerbare-Energie- Gemeinschaft I</td>\n",
-       "      <td>AT112031405500057061</td>\n",
-       "      <td>2024-09-17</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>...</td>\n",
-       "      <td>203142409172CTG-0021T0JB5VK3</td>\n",
-       "      <td>#eegfaktura</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-09-17</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>AT07ZZZ00000079253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Erneuerbare-Energie- Gemeinschaft I</td>\n",
-       "      <td>AT112031405500057061</td>\n",
-       "      <td>2024-09-16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>...</td>\n",
-       "      <td>203142409162CTG-00A3RPMD7DG1</td>\n",
-       "      <td>#eegfaktura</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-09-16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Erneuerbare-Energie- Gemeinschaft I</td>\n",
-       "      <td>AT112031405500057061</td>\n",
-       "      <td>2024-09-10</td>\n",
-       "      <td>Sparkasse Salzkammergut</td>\n",
-       "      <td>AT682031491718500118</td>\n",
-       "      <td>SKBIAT21XXX</td>\n",
-       "      <td>9.171850e+10</td>\n",
-       "      <td>20314.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>...</td>\n",
-       "      <td>203142409102AEI-F99BB0WA23MC</td>\n",
-       "      <td>#sponsoring</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-09-10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Erneuerbare-Energie- Gemeinschaft I</td>\n",
-       "      <td>AT112031405500057061</td>\n",
-       "      <td>2024-09-05</td>\n",
-       "      <td>Google Cloud EMEA Limited</td>\n",
-       "      <td>IE35CITI99005132549640</td>\n",
-       "      <td>CITIIE2XXXX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>...</td>\n",
-       "      <td>201002409022AEI-40XQH8000954</td>\n",
-       "      <td>#förderbar</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-09-05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51126908</td>\n",
-       "      <td>IE34ZZZ362297</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Erneuerbare-Energie- Gemeinschaft I</td>\n",
-       "      <td>AT112031405500057061</td>\n",
-       "      <td>2024-08-16</td>\n",
-       "      <td>Kulturverein \"einundzwanzig\"</td>\n",
-       "      <td>AT871500000161213418</td>\n",
-       "      <td>OBKLAT2LXXX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>...</td>\n",
-       "      <td>201002408162AEI-27XVU9000856</td>\n",
-       "      <td>#honorar</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-08-16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Eigener Kontoname           Eigene IBAN Buchungsdatum  \\\n",
-       "0  Erneuerbare-Energie- Gemeinschaft I  AT112031405500057061    2024-09-17   \n",
-       "1  Erneuerbare-Energie- Gemeinschaft I  AT112031405500057061    2024-09-16   \n",
-       "2  Erneuerbare-Energie- Gemeinschaft I  AT112031405500057061    2024-09-10   \n",
-       "3  Erneuerbare-Energie- Gemeinschaft I  AT112031405500057061    2024-09-05   \n",
-       "4  Erneuerbare-Energie- Gemeinschaft I  AT112031405500057061    2024-08-16   \n",
-       "\n",
-       "                    Partnername            Partner IBAN    BIC/SWIFT  \\\n",
-       "0                           NaN                     NaN          NaN   \n",
-       "1                           NaN                     NaN          NaN   \n",
-       "2       Sparkasse Salzkammergut    AT682031491718500118  SKBIAT21XXX   \n",
-       "3     Google Cloud EMEA Limited  IE35CITI99005132549640  CITIIE2XXXX   \n",
-       "4  Kulturverein \"einundzwanzig\"    AT871500000161213418  OBKLAT2LXXX   \n",
-       "\n",
-       "   Partner Kontonummer  Bankleitzahl  Betrag Währung  ...  \\\n",
-       "0                  NaN           NaN     NaN     EUR  ...   \n",
-       "1                  NaN           NaN     NaN     EUR  ...   \n",
-       "2         9.171850e+10       20314.0     NaN     EUR  ...   \n",
-       "3                  NaN           NaN     NaN     EUR  ...   \n",
-       "4                  NaN       15000.0     NaN     EUR  ...   \n",
-       "\n",
-       "               Buchungsreferenz        Notiz Highlight  Valutadatum  \\\n",
-       "0  203142409172CTG-0021T0JB5VK3  #eegfaktura     False   2024-09-17   \n",
-       "1  203142409162CTG-00A3RPMD7DG1  #eegfaktura     False   2024-09-16   \n",
-       "2  203142409102AEI-F99BB0WA23MC  #sponsoring     False   2024-09-10   \n",
-       "3  201002409022AEI-40XQH8000954   #förderbar     False   2024-09-05   \n",
-       "4  201002408162AEI-27XVU9000856     #honorar     False   2024-08-16   \n",
-       "\n",
-       "  Virtuelle Kartennummer  Bezahlt mit  App  Zahlungsreferenz Mandats ID  \\\n",
-       "0                    NaN          NaN  NaN               NaN        NaN   \n",
-       "1                    NaN          NaN  NaN               NaN        NaN   \n",
-       "2                    NaN          NaN  NaN               NaN        NaN   \n",
-       "3                    NaN          NaN  NaN               NaN   51126908   \n",
-       "4                    NaN          NaN  NaN               NaN        NaN   \n",
-       "\n",
-       "          Creditor ID  \n",
-       "0  AT07ZZZ00000079253  \n",
-       "1                 NaN  \n",
-       "2                 NaN  \n",
-       "3       IE34ZZZ362297  \n",
-       "4                 NaN  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load CSV file into DataFrame\n",
-    "df = pd.read_csv(import_file, encoding=csv_encoding, parse_dates=[\"Buchungsdatum\", \"Valutadatum\"], dayfirst=True)\n",
+    "df = pd.read_csv(import_file, encoding=csv_encoding, parse_dates=[\n",
+    "    \"Buchungsdatum\", \n",
+    "    \"Valutadatum\"\n",
+    "    ], dayfirst=True, keep_default_na=False)\n",
     "\n",
     "\n",
     "# apply data type fixes\n",
     "df['Highlight'] = df['Highlight'].astype(bool)\n",
-    "df['Betrag'] = pd.to_numeric(df['Betrag'], errors='coerce')\n",
+    "\n",
+    "# input number format: \"10.123,02\"\n",
+    "# output: 100123.02\n",
+    "df['Betrag'] = df['Betrag'].apply( lambda x: float(x.replace(\".\", \"\").replace(\",\", \".\")))\n",
     "\n",
     "# Display the first few rows of the DataFrame\n",
     "df.head()"
@@ -306,32 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Eigener Kontoname', 'Eigene IBAN', 'Buchungsdatum', 'Partnername',\n",
-       "       'Partner IBAN', 'BIC/SWIFT', 'Partner Kontonummer', 'Bankleitzahl',\n",
-       "       'Betrag', 'Währung', 'Buchungs-Details', 'Buchungsreferenz', 'Notiz',\n",
-       "       'Highlight', 'Valutadatum', 'Virtuelle Kartennummer', 'Bezahlt mit',\n",
-       "       'App', 'Zahlungsreferenz', 'Mandats ID', 'Creditor ID'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.columns"
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,27 +121,7 @@
     "            %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s\n",
     "        )\n",
     "        ON CONFLICT (booking_date, partner_iban, amount, currency, booking_details, value_date, mandate_id, creditor_id, payment_reference, booking_reference)\n",
-    "        DO UPDATE SET\n",
-    "            account_name = EXCLUDED.account_name,\n",
-    "            iban = EXCLUDED.iban,\n",
-    "            booking_date = EXCLUDED.booking_date,\n",
-    "            partner_name = EXCLUDED.partner_name,\n",
-    "            partner_iban = EXCLUDED.partner_iban,\n",
-    "            bic_swift = EXCLUDED.bic_swift,\n",
-    "            partner_account_number = EXCLUDED.partner_account_number,\n",
-    "            bank_code = EXCLUDED.bank_code,\n",
-    "            amount = EXCLUDED.amount,\n",
-    "            currency = EXCLUDED.currency,\n",
-    "            booking_details = EXCLUDED.booking_details,\n",
-    "            note = EXCLUDED.note,\n",
-    "            highlight = EXCLUDED.highlight,\n",
-    "            value_date = EXCLUDED.value_date,\n",
-    "            virtual_card_number = EXCLUDED.virtual_card_number,\n",
-    "            paid_with = EXCLUDED.paid_with,\n",
-    "            app = EXCLUDED.app,\n",
-    "            payment_reference = EXCLUDED.payment_reference,\n",
-    "            mandate_id = EXCLUDED.mandate_id,\n",
-    "            creditor_id = EXCLUDED.creditor_id;\n",
+    "        DO NOTHING\n",
     "        \"\"\"\n",
     "\n",
     "\n",
