handling registration links

--- a/notebooks/energyData/EEG Faktura Energy Report.ipynb
+++ b/notebooks/energyData/EEG Faktura Energy Report.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,12 @@
     "GENERATION = \"GENERATION\"\n",
     "\n",
     "\n",
-    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20240801_20240831.xlsx\"\n"
+    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20240901_20240930(1).xlsx\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
