--- a/notebooks/finance/Abrechnung.ipynb
+++ b/notebooks/finance/Abrechnung.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "QUARTAL = \"Abr_YQ-2024-2\"\n",
-    "IMPORT_FILE = \"./EEG-Faktura Import/abrechnung_Abr_YQ-2024-2_export(4).xlsx\""
+    "QUARTAL = \"Abr_YQ-2024-3\"\n",
+    "IMPORT_FILE = \"./EEG-Faktura Import/abrechnung_Abr_YQ-2024-3_export.xlsx\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
