--- a/notebooks/energyData/EEG Faktura Energy Report.ipynb
+++ b/notebooks/energyData/EEG Faktura Energy Report.ipynb
@@ -26,7 +26,7 @@
     "GENERATION = \"GENERATION\"\n",
     "\n",
     "\n",
-    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20241001_20241031(1).xlsx\"\n"
+    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20241101_20241122.xlsx\"\n"
    ]
   },
   {
@@ -362,6 +362,7 @@
     "import psycopg\n",
     "import os\n",
     "import pytz\n",
+    "import time\n",
     "\n",
     "os.environ['PGSERVICEFILE'] = \"/home/martin/Workspace/Energiegemeinschaft/notebooks/.pg_service.conf\"\n",
     "os.environ['PGPASSFILE'] = \"/home/martin/Workspace/Energiegemeinschaft/notebooks/.pgpass\"\n",
@@ -372,8 +373,8 @@
     "        # iterate measurement points\n",
     "        for key in energy_data.meter_points:\n",
     "            point = energy_data.meter_points[key]\n",
-    "            print(point.id)\n",
-    "            print(point.customer_name)\n",
+    "            print(time.time(), point.id)\n",
+    "            print(time.time(), point.customer_name)\n",
     "            \n",
     "            # fetch measurement point id from db\n",
     "            cur.execute(\"\"\"\n",
@@ -384,13 +385,13 @@
     "            if len(rows) > 1:\n",
     "                raise Exception(f\"Duplicate IDs for name: {point.customer_name}\")\n",
     "            m_point_id = rows[0][0]\n",
-    "            print(\"m_point_id\", m_point_id)\n",
+    "            print(time.time(), \"m_point_id\", m_point_id)\n",
     "            \n",
     "            # iterate measurements of measurement point\n",
     "            \n",
     "            for measurement in point.measurements:\n",
     "                num_vals = len(measurement.data_list)\n",
-    "                print(f\"    {num_vals} {measurement.meter_code}\")\n",
+    "                print(time.time(), f\"    {num_vals} {measurement.meter_code}\")\n",
     "    \n",
     "                #extract unit and description\n",
     "                unit = measurement.meter_code.split(\" \")[-1].replace(\"[\", \"\").replace(\"]\", \"\")\n",
@@ -418,11 +419,11 @@
     "                if len(rows) > 1:\n",
     "                    raise Exception(f\"Duplicate IDs for description: {description}\")\n",
     "                meter_code_id = rows[0][0]\n",
-    "                print(\"meter_code_id\", meter_code_id)\n",
+    "                print(time.time(), \"meter_code_id\", meter_code_id)\n",
     "                \n",
     "                \n",
     "                for val in measurement.data_list:\n",
-    "                    #print(val['value'], val['timestamp'])\n",
+    "                    #print(time.time(), val['value'], val['timestamp'])\n",
     "                    \n",
     "                    ## adding the correct time zone before inserting into db\n",
     "                    ts_without_timezone = val['timestamp']\n",
@@ -453,365 +454,6 @@
     "\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Legacy Stuff below..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Print structure of EnergyData"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_structure():\n",
-    "    print(\"Calculated Totals Added. Sums over all meter points\")\n",
-    "    for total in energy_data.calculated_totals:\n",
-    "        print(f\"\\t{total.period_start} - {total.period_end} {total.meter_code}\")\n",
-    "\n",
-    "    print()\n",
-    "    for key in energy_data.meter_points:\n",
-    "        meter_point = energy_data.meter_points[key]\n",
-    "        print(f\"{meter_point.id}\")\n",
-    "        print(f\"\\t{meter_point.energy_direction}\")\n",
-    "        print(f\"\\t{len(meter_point.measurements)} measurements\")\n",
-    "        for measurement in meter_point.measurements:\n",
-    "            print(f\"\\t\\t{measurement.meter_code}\")\n",
-    "            print(f\"\\t\\t\\t{measurement.period_start} - {measurement.period_end}\")\n",
-    "            print(f\"\\t\\t\\t{len(measurement.data_list)} values\")\n",
-    "        print()\n",
-    "\n",
-    "print_structure()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dayly Graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def dayly_graph(day, total_consumption, total_production, self_use):\n",
-    "\n",
-    "    start = datetime.strptime(f\"{day} 00:00:00\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "    end = datetime.strptime(f\"{day} 23:59:59\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "\n",
-    "    # pick first\n",
-    "    m1 = total_consumption.slice_by_timestamp(start, end)\n",
-    "    m2 = total_production.slice_by_timestamp(start, end)\n",
-    "    m3 = self_use.slice_by_timestamp(start, end)\n",
-    "\n",
-    "    #print(m1.sum(), m1.meter_code)\n",
-    "    #print(m2.sum(), m2.meter_code)\n",
-    "    #print(m3.sum(), m3.meter_code)\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(14, 10))  # Create a figure containing a single axes.\n",
-    "    ax.plot(m1.get_x_axis(), m1.get_y_axis(), label=f\"{'{:.2f}'.format(m1.sum())} kWh {m1.meter_code}\") \n",
-    "    ax.plot(m2.get_x_axis(), m2.get_y_axis(), label=f\"{'{:.2f}'.format(m2.sum())} kWh {m2.meter_code}\") \n",
-    "    ax.plot(m3.get_x_axis(), m3.get_y_axis(), label=f\"{'{:.2f}'.format(m3.sum())} kWh {m3.meter_code}\")\n",
-    "    ax.fill_between(m3.get_x_axis(), m3.get_y_axis(), color=\"green\")\n",
-    "\n",
-    "    ax.set_title(f\"Verbrauch und Produktion {day}\")\n",
-    "    ax.set_xlabel('Zeit')\n",
-    "    ax.set_ylabel('Arbeit in kWh / 15min')\n",
-    "    ax.legend()\n",
-    "\n",
-    "\n",
-    "#dayly_graph(\"2024-02-03\", energy_data.calculated_totals[0], energy_data.calculated_totals[3], energy_data.calculated_totals[2])\n",
-    "#dayly_graph(\"2024-02-11\", energy_data.calculated_totals[0], energy_data.calculated_totals[3], energy_data.calculated_totals[2])\n",
-    "#dayly_graph(\"2024-02-12\", energy_data.calculated_totals[0], energy_data.calculated_totals[3], energy_data.calculated_totals[2])\n",
-    "\n",
-    "dayly_graph(\"2024-06-12\", energy_data.calculated_totals[0], energy_data.calculated_totals[3], energy_data.calculated_totals[2])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Producers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def producer_graph(day, point_id):\n",
-    "    \n",
-    "    meter_point = energy_data.meter_points[point_id]\n",
-    "\n",
-    "    meter_point.measurements[0].meter_code\n",
-    "\n",
-    "    start = datetime.strptime(f\"{day} 00:00:00\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "    end = datetime.strptime(f\"{day} 23:59:59\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "\n",
-    "    # pick first\n",
-    "    m1 = meter_point.measurements[0].slice_by_timestamp(start, end)\n",
-    "    m2 = meter_point.measurements[1].slice_by_timestamp(start, end)\n",
-    "    #m3 = meter_point.measurements[2].slice_by_timestamp(start, end)\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(14, 10))  # Create a figure containing a single axes.\n",
-    "    ax.plot(m1.get_x_axis(), m1.get_y_axis(), label=f\"{'{:.2f}'.format(m1.sum())} kWh {m1.meter_code}\") \n",
-    "    ax.plot(m2.get_x_axis(), m2.get_y_axis(), label=f\"{'{:.2f}'.format(m2.sum())} kWh {m2.meter_code}\") \n",
-    "    #ax.plot(m3.get_x_axis(), m3.get_y_axis(), label=f\"{'{:.2f}'.format(m3.sum())} kWh {m3.meter_code}\")\n",
-    "    ax.fill_between(m1.get_x_axis(), m1.get_y_axis(), m2.get_y_axis(), color=\"green\")\n",
-    "\n",
-    "    ax.set_title(f\"Produktion {point_id} {day}\")\n",
-    "    ax.set_xlabel('Zeit')\n",
-    "    ax.set_ylabel('Arbeit in kWh / 15min')\n",
-    "    ax.legend()\n",
-    "\n",
-    "\n",
-    "#producer_graph(\"2024-02-03\", \"AT0030000000000000000000030054193\")\n",
-    "#producer_graph(\"2024-02-03\", \"AT0030000000000000000000030054193\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Consumers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def consumer_graph(day, point_id):\n",
-    "    \n",
-    "    meter_point = energy_data.meter_points[point_id]\n",
-    "\n",
-    "    meter_point.measurements[0].meter_code\n",
-    "\n",
-    "    start = datetime.strptime(f\"{day} 00:00:00\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "    end = datetime.strptime(f\"{day} 23:59:59\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "\n",
-    "    # pick first\n",
-    "    m1 = meter_point.measurements[0].slice_by_timestamp(start, end)\n",
-    "    m2 = meter_point.measurements[1].slice_by_timestamp(start, end)\n",
-    "    m3 = meter_point.measurements[2].slice_by_timestamp(start, end)\n",
-    "\n",
-    "\n",
-    "    #print(m1.sum(), m1.meter_code)\n",
-    "    #print(m2.sum(), m2.meter_code)\n",
-    "    #print(m3.sum(), m3.meter_code)\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(14, 10))  # Create a figure containing a single axes.\n",
-    "    ax.plot(m1.get_x_axis(), m1.get_y_axis(), label=f\"{'{:.2f}'.format(m1.sum())} kWh {m1.meter_code}\") \n",
-    "    ax.plot(m2.get_x_axis(), m2.get_y_axis(), label=f\"{'{:.2f}'.format(m2.sum())} kWh {m2.meter_code}\") \n",
-    "    ax.plot(m3.get_x_axis(), m3.get_y_axis(), label=f\"{'{:.2f}'.format(m3.sum())} kWh {m3.meter_code}\")\n",
-    "    ax.fill_between(m3.get_x_axis(), m3.get_y_axis(), color=\"green\")\n",
-    "\n",
-    "    ax.set_title(f\"Verbrauch {point_id} {day}\")\n",
-    "    ax.set_xlabel('Zeit')\n",
-    "    ax.set_ylabel('Arbeit in kWh / 15 min')\n",
-    "    ax.legend()\n",
-    "\n",
-    "\n",
-    "#consumer_graph(\"2024-02-10\", \"AT0030000000000000000000000118026\")\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Durchschnittliche Verteilungen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "for metric in energy_data.get_metrics():\n",
-    "    print(metric)  \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Gesamtverbrauch und Gesamtproduktion der EEG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.ticker as ticker\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "avg_of_consumers = energy_data.dayly_average_sum_by_metric({\n",
-    "        'energy_direction': 'CONSUMPTION', \n",
-    "        'meter_code': 'Gesamtverbrauch lt. Messung (bei Teilnahme gem. Erzeugung) [KWH]'\n",
-    "    })\n",
-    "\n",
-    "\n",
-    "avg_of_producers = energy_data.dayly_average_sum_by_metric({\n",
-    "        'energy_direction': 'GENERATION', \n",
-    "        'meter_code': 'Gesamte gemeinschaftliche Erzeugung [KWH]'\n",
-    "    })\n",
-    "\n",
-    "\n",
-    "self_use = Measurement(\n",
-    "    avg_of_producers.period_start,\n",
-    "    avg_of_producers.period_end,\n",
-    "    'Mittelwert Gesamter Eigenverbrauch',\n",
-    "    None\n",
-    ")\n",
-    "\n",
-    "# Eigendeckung gemeinschaftliche Erzeugung [KWH]\n",
-    "avg_of_self_use = energy_data.dayly_average_sum_by_metric({\n",
-    "        'energy_direction': 'CONSUMPTION', \n",
-    "        'meter_code': 'Eigendeckung gemeinschaftliche Erzeugung [KWH]'\n",
-    "    })\n",
-    "\n",
-    "# get diff and generate x axis\n",
-    "x = []\n",
-    "for key in avg_of_producers.data_map:\n",
-    "    diff = min(avg_of_consumers.data_map[key], avg_of_producers.data_map[key])\n",
-    "    self_use.add_value_at_timestamp(diff, key)\n",
-    "    x.append(f\"{key.time()}\")\n",
-    "\n",
-    "        \n",
-    "fig, ax = plt.subplots(figsize=(14, 10))  # Create a figure containing a single axes.\n",
-    "ax.plot(x, avg_of_consumers.get_y_axis(), label=f\"{'{:.2f}'.format(avg_of_consumers.sum())} kWh {avg_of_consumers.meter_code}\") \n",
-    "ax.plot(x, avg_of_producers.get_y_axis(), label=f\"{'{:.2f}'.format(avg_of_producers.sum())} kWh {avg_of_producers.meter_code}\") \n",
-    "ax.plot(x, avg_of_self_use.get_y_axis(), label=f\"{'{:.2f}'.format(avg_of_self_use.sum())} kWh {avg_of_self_use.meter_code}\") \n",
-    "\n",
-    "#ax.fill_between(x, self_use.get_y_axis(), color=\"green\")\n",
-    "tick_spacing = 8\n",
-    "ax.xaxis.set_major_locator(ticker.MultipleLocator(tick_spacing))\n",
-    "\n",
-    "\n",
-    "ax.set_title(f\"EEG Erzeugung und Verbrauch {energy_data.timestamps[0]} bis {energy_data.timestamps[-1]}\")\n",
-    "ax.set_xlabel('Zeit')\n",
-    "ax.set_ylabel('Arbeit in kWh / 15 min')\n",
-    "ax.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Member Graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# über alle messpunkte jedes kunden\n",
-    "\n",
-    "customer_name = \"Johannes Kals\"\n",
-    "measurements = energy_data.get_measurements_by_customer(customer_name)\n",
-    "\n",
-    "import matplotlib.ticker as ticker\n",
-    "\n",
-    "avg_of_consumers = energy_data.dayly_average_sum_by_metric({\n",
-    "        'energy_direction': 'CONSUMPTION', \n",
-    "        'meter_code': 'Gesamtverbrauch lt. Messung (bei Teilnahme gem. Erzeugung) [KWH]'\n",
-    "    }, measurements=measurements)\n",
-    "\n",
-    "\n",
-    "avg_of_producers = energy_data.dayly_average_sum_by_metric({\n",
-    "        'energy_direction': 'GENERATION', \n",
-    "        'meter_code': 'Gesamte gemeinschaftliche Erzeugung [KWH]'\n",
-    "    }, measurements=measurements)\n",
-    "\n",
-    "# Eigendeckung gemeinschaftliche Erzeugung [KWH]\n",
-    "avg_of_self_use = energy_data.dayly_average_sum_by_metric({\n",
-    "        'energy_direction': 'CONSUMPTION', \n",
-    "        'meter_code': 'Eigendeckung gemeinschaftliche Erzeugung [KWH]'\n",
-    "    }, measurements=measurements)\n",
-    "\n",
-    "\n",
-    "self_use = Measurement(\n",
-    "    avg_of_producers.period_start,\n",
-    "    avg_of_producers.period_end,\n",
-    "    'Mittelwert Gesamter Eigenverbrauch',\n",
-    "    None\n",
-    ")\n",
-    "\n",
-    "# get diff and generate x axis\n",
-    "x = []\n",
-    "for key in avg_of_producers.data_map:\n",
-    "    diff = min(avg_of_consumers.data_map[key], avg_of_producers.data_map[key])\n",
-    "    self_use.add_value_at_timestamp(diff, key)\n",
-    "    x.append(f\"{key.time()}\")\n",
-    "\n",
-    "        \n",
-    "fig, ax = plt.subplots(figsize=(14, 10))  # Create a figure containing a single axes.\n",
-    "ax.plot(x, avg_of_consumers.get_y_axis(), label=f\"{'{:.2f}'.format(avg_of_consumers.sum())} kWh {avg_of_consumers.meter_code}\") \n",
-    "ax.plot(x, avg_of_producers.get_y_axis(), label=f\"{'{:.2f}'.format(avg_of_producers.sum())} kWh {avg_of_producers.meter_code}\") \n",
-    "ax.plot(x, avg_of_self_use.get_y_axis(), label=f\"{'{:.2f}'.format(avg_of_self_use.sum())} kWh {avg_of_self_use.meter_code}\") \n",
-    "\n",
-    "#ax.fill_between(x, self_use.get_y_axis(), color=\"green\")\n",
-    "\n",
-    "tick_spacing = 8\n",
-    "ax.xaxis.set_major_locator(ticker.MultipleLocator(tick_spacing))\n",
-    "\n",
-    "\n",
-    "ax.set_title(f\"{customer_name} EEG Erzeugung und Verbrauch {energy_data.timestamps[0]} bis {energy_data.timestamps[-1]}\")\n",
-    "ax.set_xlabel('Zeit')\n",
-    "ax.set_ylabel('Arbeit in kWh / 15 min')\n",
-    "ax.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
