--- a/notebooks/energyData/EEG Faktura Energy Report.ipynb
+++ b/notebooks/energyData/EEG Faktura Energy Report.ipynb
@@ -26,7 +26,7 @@
     "GENERATION = \"GENERATION\"\n",
     "\n",
     "\n",
-    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250209_20250215.xlsx\"\n"
+    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250216_20250222 (2).xlsx\"\n"
    ]
   },
   {
