Q1 2025 for performance chart

--- a/notebooks/energyData/EEG Faktura Energy Report.ipynb
+++ b/notebooks/energyData/EEG Faktura Energy Report.ipynb
@@ -26,7 +26,9 @@
     "GENERATION = \"GENERATION\"\n",
     "\n",
     "\n",
-    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250216_20250222 (2).xlsx\"\n"
+    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250309_20250315.xlsx\"\n",
+    "\n",
+    "#"
    ]
   },
   {
@@ -451,8 +453,29 @@
     "            \n",
     "\n",
     "        conn.commit()\n",
+    "        \n",
+    "        \n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import psycopg\n",
+    "\n",
+    "with psycopg.connect(service='eeg-middleware', autocommit=True) as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        cur.execute(\"VACUUM ANALYSE\")  # Runs outside a transaction\n",
+    "\n",
+    "# Reconnect (or use a new connection) to execute the next statement within a transaction\n",
+    "with psycopg.connect(service='eeg-middleware') as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        cur.execute(\"REFRESH MATERIALIZED VIEW weekly_metering_summary\")\n"
    ]
   }
  ],
