full member table

--- a/notebooks/energyData/EEG Faktura Energy Report.ipynb
+++ b/notebooks/energyData/EEG Faktura Energy Report.ipynb
@@ -26,7 +26,7 @@
     "GENERATION = \"GENERATION\"\n",
     "\n",
     "\n",
-    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250501_20250525.xlsx\"\n",
+    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250601_20250621.xlsx\"\n",
     "\n",
     "#"
    ]
@@ -475,8 +475,21 @@
     "# Reconnect (or use a new connection) to execute the next statement within a transaction\n",
     "with psycopg.connect(service='eeg-middleware') as conn:\n",
     "    with conn.cursor() as cur:\n",
-    "        cur.execute(\"REFRESH MATERIALIZED VIEW weekly_metering_summary\")\n"
+    "        cur.execute(\"REFRESH MATERIALIZED VIEW weekly_metering_summary\")\n",
+    "        \n",
+    "# Reconnect (or use a new connection) to execute the next statement within a transaction\n",
+    "with psycopg.connect(service='eeg-middleware') as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        cur.execute(\"REFRESH MATERIALIZED VIEW daily_metering_summary\")        \n",
+    "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
