open meteo data model

--- a/notebooks/weather/load open meteo.ipynb
+++ b/notebooks/weather/load open meteo.ipynb
@@ -10,10 +10,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# download data\n",
+    "data = {}\n",
+    "\n",
+    "# https://api.open-meteo.com/v1/forecast?latitude=47.712596&longitude=13.618029&hourly=temperature_2m,cloud_cover,rain,snowfall,snow_depth,cloud_cover_low,cloud_cover_mid,cloud_cover_high,visibility,relative_humidity_2m,dew_point_2m&timezone=Europe%2FBerlin&past_days=7\n",
+    "\n",
+    "# returns JSON\n",
+    "\n",
+    "url = \"https://api.open-meteo.com/v1/forecast?latitude=47.712596&longitude=13.618029&hourly=temperature_2m,cloud_cover,rain,snowfall,snow_depth,cloud_cover_low,cloud_cover_mid,cloud_cover_high,visibility,relative_humidity_2m,dew_point_2m&timezone=Europe%2FBerlin&past_days=7\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()  # Automatically parses JSON into a Python dictionary\n",
+    "    print(\"Downloaded JSON successfully!\")\n",
+    "    print(data)\n",
+    "else:\n",
+    "    print(f\"Failed to download JSON. Status code: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hourly_units = data['hourly_units']\n",
+    "hourly_units\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Load CSV into a Python data structure for processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = list(hourly_units.keys())\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hourly = data[\"hourly\"]\n",
+    "data_frame_setup = {}\n",
+    "\n",
+    "for metric in metrics:\n",
+    "    data_frame_setup[metric] = hourly[metric]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data_frame_setup)\n",
+    "\n",
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
